NCIATWP-104: Change Header and Footer, also fixed layout issues.

--- a/apc/apc.css
+++ b/apc/apc.css
@@ -170,3 +170,77 @@ padding-bottom:10px;
 #helpcolumn2 {margin-left: 620px;}
 #glossary {float:left;width:1000px;}
 
+#logos {
+        height: 43px;
+        background-color: #A90101;
+}
+
+#logos #left {
+        float: left;
+}
+
+#logos #right {
+        height: 43px;
+        float: right;
+}
+
+#dceg_logo {
+        height: 43px;
+        background-image: url("../images/DCEGBB-RightSide.png");
+        width: 100%;
+        background-repeat: repeat-x;
+        background-size: 10px 43px;
+}
+
+#banners {
+        height: 43px;
+}
+
+#banners #left {
+        float: left;
+}
+
+#banners #right {
+        height: 43px;
+        float: right;
+}
+
+#wrapper {
+        width: 955px;
+        margin: 0 auto;
+}
+
+#login {
+        width: 935px;
+        margin: 0 auto;
+        border: solid 1px #322e82;
+        margin-top: 30px;
+}
+
+#portal-footer {
+        line-height: 1.2em;
+        margin: 2em 0em 1em 0em;
+        padding: 1em 0em 1em 0em;
+        text-align: center;
+        background-color: #FFF;
+        color: #333333;
+        font-size: 79%;
+}
+
+#portal-footer a {
+        text-decoration: none;
+        color: #333333;
+        border: none;
+}
+
+#portal-footer a:visited {
+        color: #333333;
+}
+
+#portal-footer a:hover {
+        text-decoration: underline;
+}
+
+.footerLinks {
+        padding: .5em 0em 0em 0em;
+}
